h5/k8s/security/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
