h5/k8s/security/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-course
spec:
  selector:
    matchLabels:
      app: frontend
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
